# EmbeddedRTSPStack

./: .gitmodules  LICENSE  README.md
demo/rtsp_server/: CMakeLists.txt  main.cpp  rtsp_server.c  rtsp_server.h
src/: CMakeLists.txt  rtsp_debug.c  rtsp_internal.c  rtsp_parser.c  rtsp_writer.c
src/include/: rtsp_debug.h  rtsp_parser.h  rtsp_types.h  rtsp_writer.h
src/internal_include/: rtsp_internal.h
